// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anonymous 1`] = `
<main
  class="s-A-bC3Hke5zSn"
>
  <header
    class="s-c1MG4BWNDc59"
  >
    <nav
      class="s-c1MG4BWNDc59"
    >
      <span
        class="s-c1MG4BWNDc59"
      >
        <ol
          class="s-x5nEMCoiqeIy"
        >
          <li
            class="s-x5nEMCoiqeIy"
          >
            <a
              class="s-x5nEMCoiqeIy"
            >
              Accueil
            </a>
          </li>
           
          
        </ol>
        
        <!--&lt;Breadcrumb&gt;-->
      </span>
       
      <button
        class="secondary s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          account_circle
        </span>
        
        
        
      </button>
      <!--&lt;Button&gt;-->
    </nav>
     
    <div
      class="s-c1MG4BWNDc59"
    >
      <h1
        class="s-A-bC3Hke5zSn"
      >
        Bienvenue sur Tabulous !
      </h1>
    </div>
  </header>
  <!--&lt;Header&gt;-->
   
  <div
    class="s-A-bC3Hke5zSn"
  >
     
    <h2
      class="s-A-bC3Hke5zSn"
    >
      Jeux disponibles
    </h2>
     
    <section
      aria-roledescription="catalog"
      class="s-A-bC3Hke5zSn"
    >
      <article
        class="s-Z6y0dSYOFWU8"
        role="link"
        tabindex="0"
      >
        <img
          alt="Jeu de 32 cartes"
          class="s-Z6y0dSYOFWU8"
          src="http://localhost:3001/games/32-cards/catalog/cover.webp"
        />
         
        <div
          class="content s-Z6y0dSYOFWU8"
        >
          <legend
            class="s-Z6y0dSYOFWU8"
          >
            <div
              class="title s-Z6y0dSYOFWU8"
            >
              <h3
                class="s-Z6y0dSYOFWU8"
              >
                Jeu de 32 cartes
              </h3>
               
              <details
                class="s-Z6y0dSYOFWU8 hidden"
              >
                <summary
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Créé par : 
                  </strong>
                  undefined
                </summary>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Illustré par : 
                  </strong>
                  undefined
                </p>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Distribué par : 
                  </strong>
                  undefined
                </p>
              </details>
            </div>
             
            <span
              class="characteristics s-Z6y0dSYOFWU8"
            >
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  people
                </span>
                2-8
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8 hidden"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  access_time
                </span>
                undefined'
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8 hidden"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  person
                </span>
                undefined+
              </span>
            </span>
          </legend>
        </div>
      </article>
      <!--&lt;CatalogItem&gt;-->
      <article
        class="s-Z6y0dSYOFWU8"
        role="link"
        tabindex="0"
      >
        <img
          alt="Dames"
          class="s-Z6y0dSYOFWU8"
          src="http://localhost:3001/games/draughts/catalog/cover.webp"
        />
         
        <div
          class="content s-Z6y0dSYOFWU8"
        >
          <legend
            class="s-Z6y0dSYOFWU8"
          >
            <div
              class="title s-Z6y0dSYOFWU8"
            >
              <h3
                class="s-Z6y0dSYOFWU8"
              >
                Dames
              </h3>
               
              <details
                class="s-Z6y0dSYOFWU8 hidden"
              >
                <summary
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Créé par : 
                  </strong>
                  undefined
                </summary>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Illustré par : 
                  </strong>
                  undefined
                </p>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Distribué par : 
                  </strong>
                  undefined
                </p>
              </details>
            </div>
             
            <span
              class="characteristics s-Z6y0dSYOFWU8"
            >
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  people
                </span>
                2
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  access_time
                </span>
                30'
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  person
                </span>
                6+
              </span>
            </span>
          </legend>
        </div>
      </article>
      <!--&lt;CatalogItem&gt;-->
      <article
        class="s-Z6y0dSYOFWU8"
        role="link"
        tabindex="0"
      >
        <img
          alt="Solitaire"
          class="s-Z6y0dSYOFWU8"
          src="http://localhost:3001/games/klondike/catalog/cover.webp"
        />
         
        <div
          class="content s-Z6y0dSYOFWU8"
        >
          <legend
            class="s-Z6y0dSYOFWU8"
          >
            <div
              class="title s-Z6y0dSYOFWU8"
            >
              <h3
                class="s-Z6y0dSYOFWU8"
              >
                Solitaire
              </h3>
               
              <details
                class="s-Z6y0dSYOFWU8 hidden"
              >
                <summary
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Créé par : 
                  </strong>
                  undefined
                </summary>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Illustré par : 
                  </strong>
                  undefined
                </p>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Distribué par : 
                  </strong>
                  undefined
                </p>
              </details>
            </div>
             
            <span
              class="characteristics s-Z6y0dSYOFWU8"
            >
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  people
                </span>
                1
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  access_time
                </span>
                15'
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  person
                </span>
                7+
              </span>
            </span>
          </legend>
        </div>
      </article>
      <!--&lt;CatalogItem&gt;-->
    </section>
  </div>
</main>
`;

exports[`Authenticated 1`] = `
<main
  class="s-A-bC3Hke5zSn"
>
  <header
    class="s-c1MG4BWNDc59"
  >
    <nav
      class="s-c1MG4BWNDc59"
    >
      <span
        class="s-c1MG4BWNDc59"
      >
        <ol
          class="s-x5nEMCoiqeIy"
        >
          <li
            class="s-x5nEMCoiqeIy"
          >
            <a
              class="s-x5nEMCoiqeIy"
            >
              Accueil
            </a>
          </li>
           
          
        </ol>
        
        <!--&lt;Breadcrumb&gt;-->
      </span>
       
      <span
        aria-expanded="false"
        aria-haspopup="menu"
        class="wrapper s-rGIwyFRHo8D9"
      >
        <button
          class="transparent s-NMyTiX1zi6rz"
        >
          
          
          
          <figure
            class="s-engCJu8q-fNe"
            style="--dimension: 30px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 0px"
          >
            <img
              alt="avatar for Jane Doe"
              class="s-engCJu8q-fNe"
              height="30"
              referrerpolicy="no-referrer"
              width="30"
            />
             
            <figcaption
              class="s-engCJu8q-fNe abbreviated"
            >
              JD
            </figcaption>
          </figure>
          <!--&lt;PlayerThumbnail&gt;-->
           
          
        </button>
        <!--&lt;Button&gt;-->
         
        
        <!--&lt;Menu&gt;-->
      </span>
      <!--&lt;Dropdown&gt;-->
    </nav>
     
    <div
      class="s-c1MG4BWNDc59"
    >
      <h1
        class="s-A-bC3Hke5zSn"
      >
        Bonjour Jane Doe !
      </h1>
    </div>
  </header>
  <!--&lt;Header&gt;-->
   
  <div
    class="s-A-bC3Hke5zSn"
  >
    <h2
      class="s-A-bC3Hke5zSn"
    >
      Parties en cours
    </h2>
     
    <section
      aria-roledescription="games"
      class="s-A-bC3Hke5zSn"
    >
      
      <article
        class="s-QQoQzhRq8NK6"
        role="link"
        tabindex="0"
      >
        <span
          class="title s-QQoQzhRq8NK6"
        >
          <h3
            class="s-QQoQzhRq8NK6"
          >
            Jeu de 32 cartes
          </h3>
           
          <button
            class="secondary s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              delete
            </span>
            
            
            
          </button>
          <!--&lt;Button&gt;-->
        </span>
         
        <span
          class="created s-QQoQzhRq8NK6"
        >
          02 août, 09:13
        </span>
         
         
      </article>
      <!--&lt;GameLink&gt;-->
      
      <article
        class="s-QQoQzhRq8NK6"
        role="link"
        tabindex="0"
      >
        <span
          class="title s-QQoQzhRq8NK6"
        >
          <h3
            class="s-QQoQzhRq8NK6"
          >
            6 qui prend !
          </h3>
           
        </span>
         
        <span
          class="created s-QQoQzhRq8NK6"
        >
          29 juil., 08:17
        </span>
         
        <span
          class="s-QQoQzhRq8NK6"
        >
          avec Dams, Célia
        </span>
         
        <span
          class="guests s-QQoQzhRq8NK6"
        >
          invités: Hugo
        </span>
      </article>
      <!--&lt;GameLink&gt;-->
    </section>
     
    <h2
      class="s-A-bC3Hke5zSn"
    >
      Jeux disponibles
    </h2>
     
    <section
      aria-roledescription="catalog"
      class="s-A-bC3Hke5zSn"
    >
      <article
        class="s-Z6y0dSYOFWU8"
        role="link"
        tabindex="0"
      >
        <img
          alt="Dune Imperium"
          class="s-Z6y0dSYOFWU8"
          src="http://localhost:3001/games/dune-imperium/catalog/cover.webp"
        />
         
        <div
          class="content s-Z6y0dSYOFWU8"
        >
          <legend
            class="s-Z6y0dSYOFWU8"
          >
            <div
              class="title s-Z6y0dSYOFWU8"
            >
              <h3
                class="s-Z6y0dSYOFWU8"
              >
                Dune Imperium
              </h3>
               
              <details
                class="s-Z6y0dSYOFWU8"
              >
                <summary
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Créé par : 
                  </strong>
                  Paul Dennen
                </summary>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Illustré par : 
                  </strong>
                  Clay Brooks, Nate Storm, Raul Ramos, Brett Nienburg, Atila Guzey, Derek Herring, Kenan Jackson
                </p>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Distribué par : 
                  </strong>
                  Dire Wolf Digital, Gale Force Nine, Lucky Duck, Legendary
                </p>
              </details>
            </div>
             
            <span
              class="characteristics s-Z6y0dSYOFWU8"
            >
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  people
                </span>
                1-4
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  access_time
                </span>
                90'
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  person
                </span>
                13+
              </span>
            </span>
          </legend>
        </div>
      </article>
      <!--&lt;CatalogItem&gt;-->
      <article
        class="s-Z6y0dSYOFWU8"
        role="link"
        tabindex="0"
      >
        <img
          alt="6 qui prend !"
          class="s-Z6y0dSYOFWU8"
          src="http://localhost:3001/games/6-takes/catalog/cover.webp"
        />
         
        <div
          class="content s-Z6y0dSYOFWU8"
        >
          <legend
            class="s-Z6y0dSYOFWU8"
          >
            <div
              class="title s-Z6y0dSYOFWU8"
            >
              <h3
                class="s-Z6y0dSYOFWU8"
              >
                6 qui prend !
              </h3>
               
              <details
                class="s-Z6y0dSYOFWU8"
              >
                <summary
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Créé par : 
                  </strong>
                  Wolfgang Kramer
                </summary>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Illustré par : 
                  </strong>
                  Franz vohwinkel
                </p>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Distribué par : 
                  </strong>
                  Amigo, Gigamic
                </p>
              </details>
            </div>
             
            <span
              class="characteristics s-Z6y0dSYOFWU8"
            >
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  people
                </span>
                2-8
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  access_time
                </span>
                15'
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  person
                </span>
                10+
              </span>
            </span>
          </legend>
        </div>
      </article>
      <!--&lt;CatalogItem&gt;-->
      <article
        class="s-Z6y0dSYOFWU8"
        role="link"
        tabindex="0"
      >
        <img
          alt="Jeu de 32 cartes"
          class="s-Z6y0dSYOFWU8"
          src="http://localhost:3001/games/32-cards/catalog/cover.webp"
        />
         
        <div
          class="content s-Z6y0dSYOFWU8"
        >
          <legend
            class="s-Z6y0dSYOFWU8"
          >
            <div
              class="title s-Z6y0dSYOFWU8"
            >
              <h3
                class="s-Z6y0dSYOFWU8"
              >
                Jeu de 32 cartes
              </h3>
               
              <details
                class="s-Z6y0dSYOFWU8 hidden"
              >
                <summary
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Créé par : 
                  </strong>
                  undefined
                </summary>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Illustré par : 
                  </strong>
                  undefined
                </p>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Distribué par : 
                  </strong>
                  undefined
                </p>
              </details>
            </div>
             
            <span
              class="characteristics s-Z6y0dSYOFWU8"
            >
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  people
                </span>
                2-8
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8 hidden"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  access_time
                </span>
                undefined'
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8 hidden"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  person
                </span>
                undefined+
              </span>
            </span>
          </legend>
        </div>
      </article>
      <!--&lt;CatalogItem&gt;-->
      <article
        class="s-Z6y0dSYOFWU8"
        role="link"
        tabindex="0"
      >
        <img
          alt="Dames"
          class="s-Z6y0dSYOFWU8"
          src="http://localhost:3001/games/draughts/catalog/cover.webp"
        />
         
        <div
          class="content s-Z6y0dSYOFWU8"
        >
          <legend
            class="s-Z6y0dSYOFWU8"
          >
            <div
              class="title s-Z6y0dSYOFWU8"
            >
              <h3
                class="s-Z6y0dSYOFWU8"
              >
                Dames
              </h3>
               
              <details
                class="s-Z6y0dSYOFWU8 hidden"
              >
                <summary
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Créé par : 
                  </strong>
                  undefined
                </summary>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Illustré par : 
                  </strong>
                  undefined
                </p>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Distribué par : 
                  </strong>
                  undefined
                </p>
              </details>
            </div>
             
            <span
              class="characteristics s-Z6y0dSYOFWU8"
            >
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  people
                </span>
                2
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  access_time
                </span>
                30'
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  person
                </span>
                6+
              </span>
            </span>
          </legend>
        </div>
      </article>
      <!--&lt;CatalogItem&gt;-->
      <article
        class="s-Z6y0dSYOFWU8"
        role="link"
        tabindex="0"
      >
        <img
          alt="Solitaire"
          class="s-Z6y0dSYOFWU8"
          src="http://localhost:3001/games/klondike/catalog/cover.webp"
        />
         
        <div
          class="content s-Z6y0dSYOFWU8"
        >
          <legend
            class="s-Z6y0dSYOFWU8"
          >
            <div
              class="title s-Z6y0dSYOFWU8"
            >
              <h3
                class="s-Z6y0dSYOFWU8"
              >
                Solitaire
              </h3>
               
              <details
                class="s-Z6y0dSYOFWU8 hidden"
              >
                <summary
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Créé par : 
                  </strong>
                  undefined
                </summary>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Illustré par : 
                  </strong>
                  undefined
                </p>
                 
                <p
                  class="s-Z6y0dSYOFWU8"
                >
                  <strong
                    class="s-Z6y0dSYOFWU8"
                  >
                    Distribué par : 
                  </strong>
                  undefined
                </p>
              </details>
            </div>
             
            <span
              class="characteristics s-Z6y0dSYOFWU8"
            >
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  people
                </span>
                1
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  access_time
                </span>
                15'
              </span>
               
              <span
                class="s-Z6y0dSYOFWU8"
              >
                <span
                  class="material-icons s-Z6y0dSYOFWU8"
                >
                  person
                </span>
                7+
              </span>
            </span>
          </legend>
        </div>
      </article>
      <!--&lt;CatalogItem&gt;-->
    </section>
  </div>
</main>
`;
